[Fix] mobile video size, spacings

--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -3,17 +3,39 @@
   h1 {
     margin-top: 5%;
     margin-bottom: 3%;
+    @media screen and (max-width: 500px) {
+      margin-top: 15%;
+      font-size: 1.6em;
+    }
   }
+  h4 {
+    @media screen and (max-width: 500px) {
+        font-size: 1.1em;
+        font-weight: bold;
+      }
+    @media screen 
+    and (max-width: 990px) {
+        margin-top: 5%;
+      }
+}
   .box {
     border-radius: 15px;
     background: rgba(255, 255, 255, 0.801);
     margin-bottom: 2%;
     justify-content: flex-start;
-    overflow: hidden;
+    overflow: hidden !important;
+    @media screen 
+    and (max-width: 990px) {
+        margin-bottom: 10%;
+      }
     .video {
       line-height: 0;
-      background-size: cover;
-      background-position: center center;
-    }
-  }
+      object-fit: cover;
+iframe {
+    @media screen and (max-width: 475px) {
+        width: 350px;
+        height: 230px;
+      }
 }
+  }
+}}
